Wed May 14 14:35:11 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* s-garopt.ads: Add three variables to handle anonymous task pool.

Mon May 12 12:32:53 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* Makefile.am, Makefile.in: Add s-rpstio.o dependencies.

Sun May 11 18:12:24 1997  Laurent Pautet  <pautet@dorine.enst.fr>

	* Makefile.zip: Don't rebuild zlib all the time.

Wed May  7 18:04:11 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-rpstio.ads: New procedure Initialize.

	* s-rpstio.adb: New procedure Initialize to avoid doing suspect
	things at elaboration time. Removed the Elaborate_All clauses.

	* s-rpcini.adb: Added call to Initialize procedure of Stream_IO.

Wed May  7 15:00:33 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-rpstio.adb, s-rpstio.ads, Makefile.am, Makefile.in, Makefile:
 	Add message passing interface.

Tue May  6 18:26:10 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garsta.adb: Renum phases.

	* s-garlic.ads: Added comments about additional phases.

	* s-garsta.adb: Removed useless with and elaborate_all clauses.

Mon May  5 21:32:28 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garter.ads: Elaborate body as soon as possible because of the
	  possible use of the protected type from outside.

Sat May  3 16:14:27 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.in: Added split to CLEANFILES.

	* split.adb: Use System.IO rather than Ada.Text_IO to avoid
	  problems with Ada.Text_IO depending on s-stratt.adb.

Fri May  2 16:40:02 1997  Samuel Tardieu <sam@inf.enst.fr>

	* Makefile.am: Use the split utility

	* constants.sh: Ditto.

	* split.adb: New utility to configure GLADE.

	* s-garpri.ads: Made a pure package.

Fri May  2 16:39:23 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am (install-data-local): Changed sed into $(SED)

Fri May  2 16:37:16 1997  Daniel Neri  <d92-dne@nada.kth.se>

	* constants.sh: Allow for very long ``uname -a'' lines which cause